<resources>
    <string name="app_name" translatable="false">Selidik Pasar</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_validation">Enter a valid email address!</string>
    <string name="password_length">Password can\'t be less than 6 character</string>
    <string name="login">Login</string>
    <string name="title">Title</string>
    <string name="published_date">Jan 31, 2022</string>
    <string name="photo">Photo</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="marketplace">Marketplace</string>
    <string name="price">Price</string>
    <string name="highlight">Highlight</string>
    <string name="rice">Rice</string>
    <string name="chicken">Chicken</string>
    <string name="beef">Beef</string>
    <string name="egg">Egg</string>
    <string name="shallot">Shallot</string>
    <string name="garlic">Garlic</string>
    <string name="red_chilli">Red Chilli Pepper</string>
    <string name="cayenne_pepper">Cayenne Pepper</string>
    <string name="cooking_oil">Cooking Oil</string>
    <string name="sugar">Sugar</string>
    <string-array name="Ingredients">
        <item>Rice</item>
        <item>Chicken</item>
        <item>Beef</item>
        <item>Egg</item>
        <item>Shallot</item>
        <item>Garlic</item>
        <item>Red Chilli Pepper</item>
        <item>Cayenne Pepper</item>
        <item>Cooking Oil</item>
        <item>Sugar</item>
    </string-array>
    <string-array name="rice_array">
        <item>Beras Kualitas Bawah I (kg)</item>
        <item>Beras Kualitas Bawah II (kg)</item>
        <item>Beras Kualitas Medium I (kg)</item>
        <item>Beras Kualitas Medium II (kg)</item>
        <item>Beras Kualitas Super I (kg)</item>
        <item>Beras Kualitas Super II (kg)</item>
    </string-array>
    <string-array name="chicken_array">
        <item>Daging Ayam Ras Segar (kg)</item>
    </string-array>
    <string-array name="beef_array">
        <item>Daging Sapi Kualitas 1 (kg)</item>
        <item>Daging Sapi Kualitas 2 (kg)</item>
    </string-array>
    <string-array name="egg_array">
        <item>Telur Ayam Ras Segar (kg)</item>
    </string-array>
    <string-array name="shallot_array">
        <item>Bawang Merah Ukuran Sedang (kg)</item>
    </string-array>
    <string-array name="garlic_array">
        <item>Bawang Putih Ukuran Sedang (kg)</item>
    </string-array>
    <string-array name="red_chilli_array">
        <item>Cabai Merah Besar (kg)</item>
        <item>Cabai Merah Keriting  (kg)</item>
    </string-array>
    <string-array name="cayanne_pepper_array">
        <item>Cabai Rawit Hijau (kg)</item>
        <item>Cabai Rawit Merah (kg)</item>
    </string-array>
    <string-array name="cooking_oil_array">
        <item>Minyak Goreng Curah (kg)</item>
        <item>Minyak Goreng Kemasan Bermerk 1 (kg)</item>
        <item>Minyak Goreng Kemasan Bermerk 2 (kg)</item>
    </string-array>
    <string-array name="sugar_array">
        <item>Gula Pasir Kualitas Premium (kg)</item>
        <item>Gula Pasir Lokal (kg)</item>
    </string-array>
    <string name="more">More</string>
    <string name="header" translatable="false">SELASAR</string>
    <string name="avatar">User Avatar</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="validation_terms">By checking this box, it\'s mean that you are agree with our terms and conditions</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="register_here">Register here!</string>
    <string name="error_response">"Something wrong, "</string>
    <string name="title_detail">Detail Summary</string>
    <string name="read_more">Read More</string>
    <string name="register_first">You cannot access this feature because you haven\'t registered an account. Please register first!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here!</string>
    <string name="change_pw">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="copyright" translatable="false">&#169; Selidik Pasar, 2022</string>
    <string name="not_login">Not Login</string>
    <string name="or">Or</string>
    <string name="icons">Icons</string>
    <string name="retry">Retry</string>
    <string name="source">"Source: "</string>
    <string name="required_field">This field is required</string>
    <string name="required_cb"><![CDATA[You have to agree with our terms & conditions]]></string>
    <string name="name_length">Name can\'t be less than 3 character!</string>
    <string name="address">"Address : "</string>
    <string name="market">"Market : "</string>
</resources>