<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news">

    <fragment
        android:id="@+id/nav_news"
        android:name="com.selasarteam.selidikpasar.view.ui.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_price"
        android:name="com.selasarteam.selidikpasar.view.ui.PriceFragment"
        android:label="@string/price"
        tools:layout="@layout/fragment_price" />

    <fragment
        android:id="@+id/nav_marketplace"
        android:name="com.selasarteam.selidikpasar.view.ui.MarketplaceFragment"
        android:label="@string/marketplace"
        tools:layout="@layout/fragment_marketplace" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.selasarteam.selidikpasar.view.ui.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/itemFragment"
        android:name="com.selasarteam.selidikpasar.view.ui.ItemFragment"
        android:label="fragment_item_list"
        tools:layout="@layout/fragment_item_list" />
</navigation>