<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.ProfileFragment">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_horizontal"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextStyle.PROFILE.TITLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        tools:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/TextStyle.PROFILE.SUBTITLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        tools:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <Button
        android:id="@+id/btn_change_pw"
        style="@style/TextStyle.BUTTON"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <Button
        android:id="@+id/btn_change_lang"
        style="@style/TextStyle.BUTTON"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/change_language"
        app:layout_constraintEnd_toEndOf="@id/btn_change_pw"
        app:layout_constraintStart_toStartOf="@id/btn_change_pw"
        app:layout_constraintTop_toBottomOf="@id/btn_change_pw" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/TextStyle.BUTTON"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@id/btn_change_lang"
        app:layout_constraintStart_toStartOf="@id/btn_change_lang"
        app:layout_constraintTop_toBottomOf="@id/btn_change_lang" />

    <View
        android:id="@+id/whitespace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/gl_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_not_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/not_login"
        android:src="@drawable/ic_broken_image"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_not_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_horizontal" />

    <TextView
        android:id="@+id/tv_not_login"
        style="@style/TextStyle.PROFILE.SUBTITLE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="12dp"
        android:text="@string/register_first"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_register_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_not_login" />

    <Button
        android:id="@id/btn_register_here"
        style="@style/TextStyle.BUTTON"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/gl_horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_not_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>